Geometry Nodes: Duplicate Elements node crashes with zero copys of spline #109171

Closed
opened 2023-06-20 19:52:31 +02:00 by Lukas Tönne · 0 comments
Member

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: AMD Radeon(TM) Graphics ATI Technologies Inc. 4.5.14802 Core Profile Context 21.40.64.06 30.0.14064.6002

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-06-19 17:26, hash: cedec09d0594
Worked: n/a

Short description of error
The Duplicate Elements node crashes in "Spline" mode when entering an amount of 0.

Exact steps for others to reproduce the error
In the attached blend file, unmute the Duplicate Elements node.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: AMD Radeon(TM) Graphics ATI Technologies Inc. 4.5.14802 Core Profile Context 21.40.64.06 30.0.14064.6002 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-06-19 17:26, hash: `cedec09d0594` Worked: n/a **Short description of error** The _Duplicate Elements_ node crashes in "Spline" mode when entering an amount of 0. **Exact steps for others to reproduce the error** In the attached blend file, unmute the _Duplicate Elements_ node.
Lukas Tönne added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-06-20 19:52:31 +02:00
Lukas Tönne added this to the Nodes & Physics project 2023-06-20 19:52:46 +02:00
Iliya Katushenock added the
Interest
Geometry Nodes
Interest
Nodes & Physics
labels 2023-06-20 19:54:27 +02:00
Iliya Katushenock self-assigned this 2023-06-20 19:57:53 +02:00
Iliya Katushenock changed title from "Duplicate Elements" node crashes with "-1" argument on splines to Geometry Nodes: "Duplicate Elements" node crashes with zero copys of spline 2023-06-20 20:02:13 +02:00
Iliya Katushenock changed title from Geometry Nodes: "Duplicate Elements" node crashes with zero copys of spline to Geometry Nodes: Duplicate Elements node crashes with zero copys of spline 2023-06-20 20:02:17 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-21 02:28:10 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109171
No description provided.