source/blender/nodes/geometry/nodes/node_geo_duplicate_elements.cc
@@ -329,6 +329,12 @@ static void duplicate_curves(GeometrySet &geometry_set,
     dst_curves_num += count;
     dst_points_num += count * points_by_curve[selection[i_curve]].size();
   }
+
+  if (dst_points_num == 0) {
+    geometry_set.remove_geometry_during_modify();
+    return;
+  }
+
   curve_offset_data.last() = dst_curves_num;
   point_offset_data.last() = dst_points_num;
 
